# examples/kitchen-sink/__snapshots__/swagger.json
@@ -160,6 +160,16 @@
               "format": "uuid",
               "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
             }
+          },
+          {
+            "name": "x-legacy-id",
+            "in": "header",
+            "required": false,
+            "schema": {
+              "description": "Deprecated: use x-request-id.",
+              "type": "string"
+            },
+            "deprecated": true
           }
         ],
         "requestBody": {
